# Semi-Markov

./: .gitignore  INSTALL  Makefile.am  Makefile.in  README.md  configure  configure.ac
doc/: concepts.rst  conf.py  distributions.rst  explicit.rst  gspntrajectory.rst  index.rst  install.rst  intro.rst  make.bat  marking.rst  mathematics.rst  transition_fusion.tex
doc/manual/: Makefile  background.rst  concepts.rst  conf.py  distributions.rst  dynamics.rst  examples.rst  explicit.rst  faq.rst  implementation.rst  index.rst  install.rst  intro.rst  manual.rst  marking.rst  observestate.rst  quickstart.rst  reference.rst  references.rst
doc/manual/_static/: .gitignore
doc/manual/images/: pond.dot
example/: Ball_Nasell.py  brownion.cpp  brownion_model.hpp  bvd.cpp  bvd_distributions.hpp  comparison.jl  cow_token.hpp  freqsir.tex  meta.cpp  sir_exp.cpp  sir_graph.cpp  sir_mixed.cpp
example/Weiss/: .gitignore  SConstruct  run_scons.sh  weiss.bib  weiss.cpp  weiss.hpp  weiss.nw
examples/: brownion.cpp  brownion_model.h  brownion_model.hpp  bvd.cpp  cow_token.h  cow_token.hpp  meta.cpp  sir_mixed.cpp
src/: smv.hpp  smv_config.hpp.in  stamp-h1  stochnet.hpp
src/continuous/: continuous_dynamics.h  continuous_dynamics.hpp  continuous_state.h  continuous_state.hpp  local_marking.h  local_marking.hpp  marking.h  marking.hpp  stochastic_dynamics.hpp
src/gspn/: breadth_double_black.hpp  build_graph.h  build_graph.hpp  contact_fusion.hpp  contact_graph.hpp  distributions.h  distributions.hpp  embedded_markov.h  explicit_transitions.h  explicit_transitions.hpp  finite_state_machine.hpp  gspn.h  gspn.hpp  partial_core_matrix.h  partial_core_matrix.hpp  petri_graph.h  petri_graph.hpp
src/utility/: ensemble.hpp  gspn_random.h  gspn_random.hpp  logging.h  logging.hpp  smv_algorithm.hpp
test/: README.md  build.sh  distlook.py  distributions_test.cpp  u-gcc48-b55
tests/: distlook.py  distributions_test.cpp
